add some minor styling as well as begin testing for the page load

--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,4 +1,18 @@
-.selected-movie--display {
-  max-width: 100%;
+article {
+  background-color: black;
+  font-family: fantasy
+}
+
+.specific-movie {
+  justify-content: center;
   height: auto;
+  border-color: black;
+  background-color: black;
+  width: 80%;
+}
+
+.specific-movie:hover {
+  transform: none;
+  border-color: black;
+
 }
