Chore: Run through style guides

--- a/src/components/MoviePoster/MoviePoster.css
+++ b/src/components/MoviePoster/MoviePoster.css
@@ -5,7 +5,8 @@
   transition: transform 0.2s ease-in-out;
   cursor: pointer;
   margin-bottom: 2%;
-  box-shadow: rgba(255, 255, 255, 0.524) 0px 8px 19px,
+  box-shadow: 
+    rgba(255, 255, 255, 0.524) 0px 8px 19px,
     rgba(0, 0, 0, 0.22) 0px 7px 6px;
   margin: 0%;
 }
@@ -16,7 +17,8 @@
   transition: transform 0.2s ease-in-out;
   cursor: pointer;
   margin-bottom: 2%;
-  box-shadow: rgba(255, 255, 255, 0.524) 0px 8px 19px,
+  box-shadow: 
+    rgba(255, 255, 255, 0.524) 0px 8px 19px,
     rgba(0, 0, 0, 0.22) 0px 7px 6px;
   margin: 0%;
 }
