Refactor: change class and variable names and styling

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 header {
-  color: white;
-  background: black;
-  height: 10vh;
+  background-color: #D01114;
+  padding: 3%;
+  border-bottom: 1px solid #3D3D3D;
+  margin-bottom: 2rem;
 }
   
