--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,27 +1,14 @@
 body {
-  color: black;
-  background-color: black;
+  background-color: #272727;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
+h1, h2, h3, 
+h4, h5, h6,
 p {
+  color: #FFFFFF;
   margin: 0;
 }
 
-.Search-Bar {
-  display: flex;
-  margin-left: 40%;
-  height: 20px;
-  border-radius: 30px;
-  padding: 10px;
-  width: 20%;
-}
+/* main {
 
-h2 {
-  color: white;
-}
+} */
