--- a/src/components/Navbar/NavBar.css
+++ b/src/components/Navbar/NavBar.css
@@ -1,7 +1,10 @@
+nav {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
 .search-box {
-    display: flex;
-    margin-left: 40%;
-    height: 20px;
-    border-radius: 30px;
-    width: 20%;
+  height: 5vh;
+  width: 30vw;
+  border-radius: 5px;
 }
