Test: add support for tests

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 header {
   background-color: #D01114;
-  padding: 3%;
+  font-size: 1rem;
+  padding: 1.5rem;
   border-bottom: 1px solid #3D3D3D;
   margin-bottom: 2rem;
 }
