--- a/src/components/Navbar/NavBar.css
+++ b/src/components/Navbar/NavBar.css
@@ -4,7 +4,8 @@ nav {
 }
 
 .search-box {
-  height: 5vh;
-  width: 30vw;
+  height: 7vh;
+  width: 35vw;
+  font-size: 1.2rem;
   border-radius: 5px;
 }
